// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spotlight Image renders correctly 1`] = `
<jest>
  <section
    class="ecl-spotlight"
    data-ecl-auto-init="Spotlight"
    data-ecl-spotlight=""
  >
    <div
      class="ecl-spotlight__header"
    >
      <div
        class="ecl-container"
      >
        In focus
      </div>
    </div>
    <a
      class="ecl-spotlight__link"
      href="/example"
    >
      <figure
        class="ecl-spotlight__picture-container"
      >
        <picture
          class="ecl-picture ecl-spotlight__picture"
          data-ecl-spotlight-image=""
        >
          <source
            media="all and (min-width: 1369px)"
            srcset="https://inno-ecl.s3.amazonaws.com/media/examples/example-image5.jpg"
          />
          <source
            data-container-width="1368"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
          />
          <source
            data-container-width="1140"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
          />
          <source
            data-container-width="768"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
          />
          <img
            alt="alternative text"
            class="ecl-spotlight__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
        </picture>
      </figure>
      <div
        class="ecl-spotlight__container"
        data-ecl-spotlight-container=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-spotlight__title"
          >
            Proin molestie sapien ut blandit
          </div>
          <div
            aria-hidden="true"
            class="ecl-spotlight__anchor"
          />
        </div>
        <footer
          class="ecl-spotlight__credit"
        >
          Copyright
        </footer>
      </div>
    </a>
  </section>
</jest>
`;

exports[`Spotlight Image renders correctly with extra attributes 1`] = `
<jest>
  <section
    class="ecl-spotlight"
    data-ecl-auto-init="Spotlight"
    data-ecl-spotlight=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-spotlight__header"
    >
      <div
        class="ecl-container"
      >
        In focus
      </div>
    </div>
    <a
      class="ecl-spotlight__link"
      href="/example"
    >
      <figure
        class="ecl-spotlight__picture-container"
      >
        <picture
          class="ecl-picture ecl-spotlight__picture"
          data-ecl-spotlight-image=""
        >
          <source
            media="all and (min-width: 1369px)"
            srcset="https://inno-ecl.s3.amazonaws.com/media/examples/example-image5.jpg"
          />
          <source
            data-container-width="1368"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
          />
          <source
            data-container-width="1140"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
          />
          <source
            data-container-width="768"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
          />
          <img
            alt="alternative text"
            class="ecl-spotlight__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
        </picture>
      </figure>
      <div
        class="ecl-spotlight__container"
        data-ecl-spotlight-container=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-spotlight__title"
          >
            Proin molestie sapien ut blandit
          </div>
          <div
            aria-hidden="true"
            class="ecl-spotlight__anchor"
          />
        </div>
        <footer
          class="ecl-spotlight__credit"
        >
          Copyright
        </footer>
      </div>
    </a>
  </section>
</jest>
`;

exports[`Spotlight Image renders correctly with extra class names 1`] = `
<jest>
  <section
    class="ecl-spotlight custom-class custom-class--test"
    data-ecl-auto-init="Spotlight"
    data-ecl-spotlight=""
  >
    <div
      class="ecl-spotlight__header"
    >
      <div
        class="ecl-container"
      >
        In focus
      </div>
    </div>
    <a
      class="ecl-spotlight__link"
      href="/example"
    >
      <figure
        class="ecl-spotlight__picture-container"
      >
        <picture
          class="ecl-picture ecl-spotlight__picture"
          data-ecl-spotlight-image=""
        >
          <source
            media="all and (min-width: 1369px)"
            srcset="https://inno-ecl.s3.amazonaws.com/media/examples/example-image5.jpg"
          />
          <source
            data-container-width="1368"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
          />
          <source
            data-container-width="1140"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
          />
          <source
            data-container-width="768"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
          />
          <img
            alt="alternative text"
            class="ecl-spotlight__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
        </picture>
      </figure>
      <div
        class="ecl-spotlight__container"
        data-ecl-spotlight-container=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-spotlight__title"
          >
            Proin molestie sapien ut blandit
          </div>
          <div
            aria-hidden="true"
            class="ecl-spotlight__anchor"
          />
        </div>
        <footer
          class="ecl-spotlight__credit"
        >
          Copyright
        </footer>
      </div>
    </a>
  </section>
</jest>
`;

exports[`Spotlight Image renders correctly without credit 1`] = `
<jest>
  <section
    class="ecl-spotlight"
    data-ecl-auto-init="Spotlight"
    data-ecl-spotlight=""
  >
    <div
      class="ecl-spotlight__header"
    >
      <div
        class="ecl-container"
      >
        In focus
      </div>
    </div>
    <a
      class="ecl-spotlight__link"
      href="/example"
    >
      <figure
        class="ecl-spotlight__picture-container"
      >
        <picture
          class="ecl-picture ecl-spotlight__picture"
          data-ecl-spotlight-image=""
        >
          <source
            media="all and (min-width: 1369px)"
            srcset="https://inno-ecl.s3.amazonaws.com/media/examples/example-image5.jpg"
          />
          <source
            data-container-width="1368"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
          />
          <source
            data-container-width="1140"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
          />
          <source
            data-container-width="768"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
          />
          <img
            alt="alternative text"
            class="ecl-spotlight__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
        </picture>
      </figure>
      <div
        class="ecl-spotlight__container"
        data-ecl-spotlight-container=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-spotlight__title"
          >
            Proin molestie sapien ut blandit
          </div>
          <div
            aria-hidden="true"
            class="ecl-spotlight__anchor"
          />
        </div>
      </div>
    </a>
  </section>
</jest>
`;

exports[`Spotlight Image renders correctly without header 1`] = `
<jest>
  <section
    class="ecl-spotlight"
    data-ecl-auto-init="Spotlight"
    data-ecl-spotlight=""
  >
    <a
      class="ecl-spotlight__link"
      href="/example"
    >
      <figure
        class="ecl-spotlight__picture-container"
      >
        <picture
          class="ecl-picture ecl-spotlight__picture"
          data-ecl-spotlight-image=""
        >
          <source
            media="all and (min-width: 1369px)"
            srcset="https://inno-ecl.s3.amazonaws.com/media/examples/example-image5.jpg"
          />
          <source
            data-container-width="1368"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
          />
          <source
            data-container-width="1140"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
          />
          <source
            data-container-width="768"
            data-src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
          />
          <img
            alt="alternative text"
            class="ecl-spotlight__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
        </picture>
      </figure>
      <div
        class="ecl-spotlight__container"
        data-ecl-spotlight-container=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-spotlight__title"
          >
            Proin molestie sapien ut blandit
          </div>
          <div
            aria-hidden="true"
            class="ecl-spotlight__anchor"
          />
        </div>
        <footer
          class="ecl-spotlight__credit"
        >
          Copyright
        </footer>
      </div>
    </a>
  </section>
</jest>
`;
